<resources>
    <string name="app_name">ClothesOrganizer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_gallery">My wardrobe</string>
    <string name="button_create">Create new set</string>
    <string name="button_new_thing">Add new thing</string>
    <string name="wardrobe_title">My wardrobe</string>
    <string name="creation_title">Set for today!</string>
    <string name="addition_title">New thing</string>
    <string name="addition_thing_name">Name</string>
    <string name="addition_thing_type">Type</string>
    <string name="addition_thing_name_hint">Key in name</string>
    <string name="thing_type_up">Up</string>
    <string name="thing_type_down">Down</string>
    <string name="thing_type_footwear">Footwear</string>
    <string name="thing_type_accessories">Accessories</string>
    <string name="addition_thing_temperature">Temperature</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="addition_thing_comment">Comment</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="category_activity">Category</string>
    <string name="empty_list">No things in this category</string>
    <string name="TODO">TODO</string>
    <string name="tree_points">…</string>
</resources>
